Add demo code and instructions